[package]
name = "axum-graphql-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"
axum = "0.7.4"
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
shuttle-axum = "0.43.0"
shuttle-runtime = "0.43.0"
sqlx = {version = "0.7.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "uuid"]}
tokio = "1.28.2"
uuid = { version = "1.4.1", features = ["v4"] }
serde = { version = "1.0.197", features = ["derive"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower = "0.4.13"
